[package]
name = "amdportsd"
version = "0.1.1"
edition = "2021"
description = "AMDGPU server for listing connected GPU ports"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"
authors = ['Adrian Woźniak <adrian.wozniak@ita-prog.pl>']
homepage = 'https://github.com/Eraden/amdgpud'

[package.metadata]
target = "x86_64-unknown-linux-musl"

[[bin]]
name = 'amdports'
path = "./src/main.rs"

[features]
static = ["eyra"]

[dependencies]
amdgpu = { path = "../amdgpu", features = ["gui-helper"], version = "1" }
futures = { version = "0.3", features = [] }
ron = { version = "0.7.1" }
serde = { version = "1.0.137", features = ["derive"] }
eyra = { version = "0.16.3", optional = true }
tokio = { version = "1.19.2", features = ["full"] }
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.15", features = ['env-filter'] }
